Bug fix (#9)
* [fix] folderId null 검증 수정

* [mod] 패키지 이동

* [fix] 타임존 utc 로 들어가는 문제 수정

* [mod] 코드 개선

* [fix] 페이징 시 totalElements 값 수정

* [fix] 아이템 페이징 시 이미지가 여러개인 경우 같은 id 의 아이템이 여러개 포함되는 문제 수정

* [mod] 이미지 크기 1mb 까지만 가능하도록 수정

* [fix] 잘못된 import 수정

* [fix] totalElements 구할 때 where 절에 folderId 도 추가

* [mod] 명세서 수정

* [mod] 코드 리뷰 반영

* [fix] sentry 설정을 application yaml 에서 하도록 수정